# backend

./: .gitignore  main.py  manage.py  pyproject.toml  requirements.txt
middlewares/: cors.py
psrs_recruitment/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
psrs_recruitment/migrations/: 0001_initial.py  0002_initial.py  0003_application_created_by_application_deleted_at_and_more.py  0004_job_location_job_requirements_job_responsibilities_and_more.py  0005_rename_requirements_job_qualifications_job_deadline.py  0006_alter_application_applicant.py  0007_alter_application_job.py  0008_alter_job_options.py  0009_application_unique_id_job_unique_id.py  0010_alter_application_options.py  0011_alter_job_location.py
psrs_recruitment_auth/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
psrs_recruitment_auth/migrations/: 0001_initial.py  0002_profile.py  0003_alter_profile_user.py  0004_profile_unique_id.py  0005_user_user_type.py
psrs_recruitment_backend/: asgi.py  settings.py  urls.py  wsgi.py
psrs_recruitment_mixin/: models.py
psrs_recruitment_setting/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
psrs_recruitment_setting/migrations/: 0001_initial.py  0002_company_created_by_company_deleted_at_and_more.py  0003_alter_company_options_and_more.py  0004_company_unique_id.py
psrs_recruitment_utils/: login_required.py  permissions.py
